Specs completed in yaml
